fixed contrast issues

--- a/PersonalSite/styles/site-plan.css
+++ b/PersonalSite/styles/site-plan.css
@@ -82,6 +82,7 @@ p {
 }
 .colors th {
   background-color: #999;
+  color: White;
 }
 .colors td {
   width: 25%;
@@ -90,15 +91,19 @@ p {
 
 .primary {
   background-color: var(--primary-color);
+  color: white;
 }
 .secondary {
   background-color: var(--secondary-color);
+  color: var(--primary-color);
 }
 .accent1 {
   background-color: var(--accent1-color);
+  color: var(--primary-color);
 }
 .accent2 {
   background-color: var(--accent2-color);
+  color: var(--primary-color);
 }
 
 p.colored {
